Fix missing colours and add dependency on visly core

--- a/visly-todo-app/package.json
+++ b/visly-todo-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^7.0.2",
+    "@visly/core": "^1.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
